# render3d

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
render3d/: shader.cpp  shader.h
render3d/shaders/: default.glsl
